feat: add get task endpoint
